temporarily hardcode text in html wrapped in spans and write funtion to add class right to each span when text is typed correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,11 +39,11 @@ body {
 /* styling of right or wrong letters in text to be typed box */
 
 .wrong {
-    background-color: red;
+    color: red;
 }
 
 .right {
-    background-color: green;
+    color: green;
 }
 
 /* styling of keyboard */
